manifests/network_checker/debug-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
  labels:
    app: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels:
        app: debug
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9407"
    spec:
      containers:
        - name: debug
          image: markeijsermans/debug:kitchen-sink
          command:
            - sleep
          args:
            - "864000"
          ports:
            - containerPort: 9407
