manifests/network_checker/SE-www-google-com.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www-google-com
  namespace: guestbook
spec:
  hosts:
    - www.google.com
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
    - number: 443
      name: https-port-for-tls-origination
      protocol: HTTPS
  resolution: DNS
